--- a/ECIPs/ECIP-1038.md
+++ b/ECIPs/ECIP-1038.md
@@ -5,7 +5,7 @@
     Author: Wei Tang <hi@that.world>
     Status: Draft
     Type: Standard
-    Layer: Consensus
+    Layer: Application
     Created: 2017-11-04
     
 ### Abstract
