ECIP-1038: add information about how example is jet-ed

--- a/ECIPs/ECIP-1038.md
+++ b/ECIPs/ECIP-1038.md
@@ -43,8 +43,10 @@ Usually for an opcode sequence to be replacable by native codes, it is required 
 Below we consider the opcode `MUL` does not exist, and implement a jet-able version of `MUL` using `ADD`:
 
 ```
-DUP1
-DUP3
+PUSH1 00
+DUP2
+DUP4
+ADD
 ADD
 SWAP2
 PUSH1 01
@@ -53,7 +55,7 @@ SUB
 SWAP2
 DUP3
 PC
-PUSH1 08
+PUSH1 11
 SUB
 SWAP1
 JUMPI
@@ -61,3 +63,5 @@ SWAP2
 POP
 POP
 ```
+
+This can be simplified by `MUL` -- taking two items from the stack, and push one new item which is the multiply of the two items. Its gas cost can also be simplified as `12 + 51 * <mul second item>`.
