Clearify the situation for CALLCODE in CREATE

--- a/ECIPs/ECIP-1040.md
+++ b/ECIPs/ECIP-1040.md
@@ -30,7 +30,7 @@ After the first hard fork using this scheme, the account state stored in the wor
 
 `CREATE` opcode and the contract creation transaction, however, would only deploy contracts of the newest version.
 
-The behavior of `CALLCODE` and `DELEGATECALL` are not affected by the hard fork -- they would fetch the contract code (even if the contract is deployed in a newer version) and still use the virtual machine version defined in the current contract to execute the code.
+The behavior of `CALLCODE` and `DELEGATECALL` are not affected by the hard fork -- they would fetch the contract code (even if the contract is deployed in a newer version) and still use the virtual machine version defined in the current contract (or in the case of within the input of contract creation transaction or `CREATE` opcode, the newest virtual machine version) to execute the code.
 
 There is no versioning for precompiled contracts. Once hard fork, they're available for both old and new accounts.
 
