add ecip number

--- a/ECIPs/ECIP-1043.md
+++ b/ECIPs/ECIP-1043.md
@@ -6,7 +6,7 @@ ECIP:
     Type: Standard
     Created: 2018-04-16
  ```   
-# ECIP-XXX – Fixed DAG limit restriction   
+# ECIP-1043 – Fixed DAG limit restriction   
     
 ## Abstract
 The purpose of this ECIP is to set a limit on the maximum size of the DAG to its initial state and no longer increase it on an epoch schedule
