--- a/ECIPs/ECIP-1044.md
+++ b/ECIPs/ECIP-1044.md
@@ -34,16 +34,16 @@ When mapping the IPFS base58 string to ecns resolver, first we convert the Base5
 
 
 ## Rationale
-To implement the specification, need two methods from ecns public resolver contract, when we want to store IPFS file fingerprint to contract, convert the Base58 string identifier to the hex format and invoke the `setMultihash` method below :
+To implement the specification, need two methods from ecns public resolver contract, when we want to store IPFS file fingerprint to contract, convert the Base58 string identifier to the hex format and invoke the `setContent` method below :
   
 ```
-function setMultihash(bytes32 node, bytes hash) public only_owner(node);
+function setContent(bytes32 node, bytes32 hash) public only_owner(node);
 ```
   
-Whenever users need to visit the ecns content, we call the `multihash` method to get the IPFS hex data, transfer to the Base58 format, and return the IPFS resources to use.
+Whenever users need to visit the ecns content, we call the `content` method to get the IPFS hex data, transfer to the Base58 format, and return the IPFS resources to use.
   
 ```
-function multihash(bytes32 node) public view returns (bytes);
+function content(bytes32 node) public view returns (bytes);
 ```
 
 ## Test Cases
