more details for ECIP 1046

--- a/ECIPs/ECIP-1046.md
+++ b/ECIPs/ECIP-1046.md
@@ -1,29 +1,63 @@
 ### Title
 
     ECIP: 1046
-    Title: Merkle Inclusion Proofs
+    Title: Precompiled contract for verification of Merkle Inclusion Proofs
     Authors: Kostis Karantias <kkarantias@gmail.com>, Dionysis Zindros <dionyziz@gmail.com>
     Status: Draft
     Type: Standard
     Created: 2018-08-02
     
-# ECIP 1046 - Merkle Inclusion Proofs
+# ECIP 1046 - Precompiled contract for Merkle Inclusion Proofs
 
 ## Abstract 
 
 Verification of Merkle Inclusion Proofs is obviously possible in EVM bytecode.
 However, the gas cost for such an operation is very high.
 
-The addition of a native compiled function, in a precompiled contract, to the
-EVM solves the cost problem.
-
-<!-- TODO: maybe refer to performance too? -->
+We propose adding this functionality to Ethereum Classic as a precompiled
+contract in order to combat this cost.
 
 ## Motivation
 
+Interoperability is a very important goal for Ethereum Classic. We believe that
+having a way to efficiently tell whether a transaction is included in a
+Bitcoin/Bitcoin Cash block by utilizing only the block's Merkle Tree Root and a
+short proof is a great first step in that direction.
+
+Moreover, new efficient constructions which enable cross-chain asset transfers
+like [NiPoPoWs](https://nipopows.com/) heavily rely on Merkle Inclusion Proofs.
 
 ## Specification
 
+If `block.number >= MERKLE_FORK_BLKNUM`, add a precompiled contract for Merkle
+Inclusion Proofs (`MERKLEVERIFY`).
+
+The proposal adds a new precompiled function `MERKLEVERIFY` with the following input and output.
+
+`MERKLEVERIFY` takes as **input at least 65 bytes**:
+
+1. **root hash**: the 32-byte merkle tree root hash
+2. **leaf**: the 32-byte leaf we want to prove is included in the merkle tree
+3. **leaf index**: the 1-byte (?) index of the leaf
+4. **siblings**: an array of 32-byte values, arranged from the leaves to the root
+
+`MERKLEVERIFY` returns as **output 4 bytes**:
+
+* `0x00000000` if the proof is valid
+* any non-zero value indicates an invalid proof
+
+### Address
+
+The address of `MERKLEVERIFY` is **`0x5`.**
+
+### Gas costs
+
+Gas cost for `MERKLEVERIFY` is **????**.
+
 ## Implementation
 
+Implementation pending.
+
 ## References
+
+ - [NiPoPoWs](https://nipopows.com/)
