capitalize nipopows correctly

--- a/ECIPs/ECIP-1046.md
+++ b/ECIPs/ECIP-1046.md
@@ -25,7 +25,7 @@ Bitcoin/Bitcoin Cash block by utilizing only the block's Merkle Tree Root and a
 short proof is a great first step in that direction.
 
 Moreover, new efficient constructions which enable cross-chain asset transfers
-like [NiPoPoWs](https://nipopows.com/) heavily rely on Merkle Inclusion Proofs.
+like [NIPoPoWs](https://nipopows.com/) heavily rely on Merkle Inclusion Proofs.
 
 ## Specification
 
@@ -60,4 +60,4 @@ Implementation pending.
 
 ## References
 
- - [NiPoPoWs](https://nipopows.com/)
+ - [NIPoPoWs](https://nipopows.com/)
