resort to using bytes8 = 64 bits for leaf index
* assuming that the leafs should at least be memory addressable
* no assumptions wrt blocksize to stay compatible with any future BTC/BCH
changes

--- a/ECIPs/ECIP-1046.md
+++ b/ECIPs/ECIP-1046.md
@@ -34,11 +34,11 @@ Inclusion Proofs (`MERKLEVERIFY`).
 
 The proposal adds a new precompiled function `MERKLEVERIFY` with the following input and output.
 
-`MERKLEVERIFY` takes as **input at least 65 bytes**:
+`MERKLEVERIFY` takes as **input at least 72 bytes**:
 
 1. **root hash**: the 32-byte merkle tree root hash
 2. **leaf**: the 32-byte leaf we want to prove is included in the merkle tree
-3. **leaf index**: the 1-byte (?) index of the leaf
+3. **leaf index**: the 8-byte index of the leaf
 4. **siblings**: an array of 32-byte values, arranged from the leaves to the root
 
 `MERKLEVERIFY` returns as **output 4 bytes**:
