--- a/ECIPs/ECIP-1046.md
+++ b/ECIPs/ECIP-1046.md
@@ -56,8 +56,34 @@ Gas cost for `MERKLEVERIFY` is **????**.
 
 ## Implementation
 
-Implementation pending.
+The hash function used is `SHA256(SHA256(_))`, to be compatible with Bitcoin/Bitcoin Cash.
+
+The merkle tree construction assumed is described in detail in the [Bitcoin
+Developer Reference](https://bitcoin.org/en/developer-reference#merkle-trees).
+
+Here follows an example implementation of the verification in Solidity:
+
+```solidity
+function merkleVerify(bytes32 root, bytes32 leaf, bytes8 leafIndex, bytes32[] siblings)
+  pure
+  public
+  returns (bool verificationSucceeded)
+{
+  bytes32 h = leaf;
+  for (uint i = 0; i < siblings.length; ++i) {
+    bool siblingOnTheLeft = leafIndex & 0x1 == 1;
+    if (siblingOnTheLeft)
+      h = sha256(abi.encodePacked(sha256(abi.encodePacked(siblings[i], h))));
+    else
+      h = sha256(abi.encodePacked(sha256(abi.encodePacked(h, siblings[i]))));
+    leafIndex >>= 1;
+  }
+  return h == root;
+}
+```
 
 ## References
 
  - [NIPoPoWs](https://nipopows.com/)
+ - [Original Solidity implementation](https://github.com/dionyziz/popow/blob/c82349f870eece524fc027ec787a8b3f3295d566/experiment/contractNipopow.sol#L242-L255)
+ - [Bitcoin Developer Reference](https://bitcoin.org/en/developer-reference#merkle-trees)
