Revise 1045 with futher specs for precompiled contracts and Rationale

--- a/ECIPs/ECIP-1045.md
+++ b/ECIPs/ECIP-1045.md
@@ -1,7 +1,7 @@
-### ECIP-1045: Enable Support for Byzantium Opcodes
+### ECIP-1045: Enable Support for Byzantium EVM Upgrades (Additional Opcodes and Precompiled Contracts)
 
     ECIP: 1045/undecided
-    Title: Support Byzantium Opcodes
+    Title: Enable Support for Byzantium EVM Upgrades (OPCODES and Precompiled Contracts)
     Status: Draft
     Type: Standard Track
     Author: Isaac Ardis <isaac@etcdevteam.com>
@@ -9,11 +9,11 @@
 
 ### Abstract
 
-Add support for EVM opcodes introduced in the Ethereum Foundation network via the _Byzantium_ hardfork, namely `REVERT`, `RETURNDATASIZE`, `RETURNDATACOPY`, and `STATICCALL`.
+Add support for EVM opcodes and precompiled contracts introduced in the Ethereum Foundation (ETH) network via the _Byzantium_ hardfork, namely opcodes `REVERT` (EIP 206/140), `RETURNDATASIZE` (EIP 211), `RETURNDATACOPY` (EIP 211), and `STATICCALL` (EIP 214/116), and precompiled contracts for modular exponentiation, elliptic curve addition, scalar multiplication, and pairing (EIPs 198, 212/197, 213/196).
 
-This document proposes block `6,850,000` as the upcoming block height at which to implement these changes in the network, placing the expected date of protocol hardfork around early November 2018.
+This document proposes block `7,100,000` as the upcoming block height at which to implement these changes in the network, placing the expected date of protocol hardfork in January 2019.
 
-For more information on the opcodes and their respective EIPs, please see the __History__ section of this document.
+For more information on the opcodes and their respective EIPs and implementations, please see the __History__ section of this document.
 
 ### Motivation
 
@@ -21,15 +21,22 @@ To enable and maintain interoperability between Foundation and Classic Ethereum 
 
 ### Specification
 
-TODO
+As per associated EIPs's specifications and implementations, and success determined by interoperability (implementation) of smart contracts utilizing the introduced opcode and precompiled contracts (implementation before technical specification in case of discrepency).
 
 ### Rationale
 
-TODO
+Interoperability: establishing and maintaining interoperable behavior between Ethereum clients is important for developers and end-user adoption, yielding benefits for all participating chains (eg. ETH and ETC). 
+
+On Immutability: Introducing new opcodes in the VM has the potential to change behavior of existing contracts; in the case where previously an arbitrary invalid bytecode series (yielding _invalid opcode_) would now be assigned a meaning, and thus could generate or return a value other than _invalid_. In essence, this means "making music where there was only noise before." There is a concern that this behavior change contradicts an essential promise of Immutability, since an existing failing smart contract is liable to become a succeeding (not failing) contract. In counterargument to this concern are two critical points:
+
+1. account states remain changed
+2. the "Homestead" hardfork established a precedent for this type of change, having introduced the `DELEGATECALL` opcode at block 1,150,000.
+
+With these arguments in place, along with precedence and expectation for other continuing and varied consensus-impacting protocol upgrades (eg soft- and hard-forks), it follows that the definition of Immutability is not extended to guarantee perfect consistency for future _behavior_ of historical account states, but only to only to guarantee the immutability of the account states themselves.
 
 ### Implementation
 
-TODO
+Adoption of the content of this ECIP requires a hard fork, and herein that adoption is proposed to be scheduled for block 7,100,000, roughly estimated to arrive in January 2019.
 
 ### History
 
@@ -51,5 +58,10 @@ These changes were catalogued via the EIP process in the following:
 
 > To increase smart contract security, this proposal adds a new opcode that can be used to call another contract (or itself) while disallowing any modifications to the state during the call (and its subcalls, if present).
 
+- EIP-198: Precompiled contract for modular exponentiation - https://github.com/ethereum/EIPs/pull/198
 
+- EIP-212: Precompiled contract for elliptic curve pairing - https://github.com/ethereum/EIPs/pull/212
 
+- EIP-213: Precompiled contract for elliptic curve addition and scalar multiplication - https://github.com/ethereum/EIPs/pull/213
+
+These changes were introduced in the Ethereum Foundation go-ethereum client via the [1.7 "Megara" release](https://github.com/ethereum/go-ethereum/releases/tag/v1.7.0).
