Include specification for introduction of EIP658 (transaction receipt status code)

--- a/ECIPs/ECIP-1045.md
+++ b/ECIPs/ECIP-1045.md
@@ -1,7 +1,7 @@
-### ECIP-1045: Enable Support for Byzantium EVM Upgrades (Additional Opcodes and Precompiled Contracts)
+### ECIP-1045: Enable Support for Byzantium EVM and Protocol Upgrades
 
     ECIP: 1045/undecided
-    Title: Enable Support for Byzantium EVM Upgrades (OPCODES and Precompiled Contracts)
+    Title: Enable Support for Byzantium EVM and Protocol Upgrades (EVM OPCODES and Precompiled Contracts, Transaction Status code in receipts)
     Status: Draft
     Type: Standard Track
     Author: Isaac Ardis <isaac@etcdevteam.com>
@@ -9,7 +9,10 @@
 
 ### Abstract
 
-Add support for EVM opcodes and precompiled contracts introduced in the Ethereum Foundation (ETH) network via the _Byzantium_ hardfork, namely opcodes `REVERT` (EIP 206/140), `RETURNDATASIZE` (EIP 211), `RETURNDATACOPY` (EIP 211), and `STATICCALL` (EIP 214/116), and precompiled contracts for modular exponentiation, elliptic curve addition, scalar multiplication, and pairing (EIPs 198, 212/197, 213/196).
+Add support for a subset of protocol-impacting changes introduced in the Ethereum Foundation (ETH) network via the _Byzantium_ hardfork. The proposed changes include:
+
+- EVM opcodes and precompiled contracts , namely opcodes `REVERT` (EIP 206/140), `RETURNDATASIZE` (EIP 211), `RETURNDATACOPY` (EIP 211), and `STATICCALL` (EIP 214/116), and precompiled contracts for modular exponentiation, elliptic curve addition, scalar multiplication, and pairing (EIPs 198, 212/197, 213/196)
+- Replacing the intermediate state root field in transaction receipts with the contract return status (EIP 658).
 
 This document proposes block `7,100,000` as the upcoming block height at which to implement these changes in the network, placing the expected date of protocol hardfork in January 2019.
 
@@ -38,9 +41,14 @@ With these arguments in place, along with precedence and expectation for other c
 
 Adoption of the content of this ECIP requires a hard fork, and herein that adoption is proposed to be scheduled for block 7,100,000, roughly estimated to arrive in January 2019.
 
+The `ethereumproject/go-ethereum` client implemented an API-only (non-consensus impacting) partial adoption of EIP-658 Transaction status code change via the [v5.5.0](https://github.com/ethereumproject/go-ethereum/releases/tag/v5.5.0) release, and this proposal would augment that change to extend through to the RLP encoding (and thus modify consensus protocol).
+
 ### History
 
 These changes were catalogued via the EIP process in the following:
+
+- EIP-658: Transaction receipts embedding status code instead of intermediate state root field - https://github.com/ethereum/EIPs/pull/658
+
 - EIP-140: `REVERT` - https://github.com/ethereum/EIPs/pull/206/files
 
 
