use bits instead of bytes for readability
as per the recommendation of @splix

--- a/ECIPs/ECIP-1046.md
+++ b/ECIPs/ECIP-1046.md
@@ -36,10 +36,10 @@ The proposal adds a new precompiled function `MERKLEVERIFY` with the following i
 
 `MERKLEVERIFY` takes as **input at least 72 bytes**:
 
-1. **root hash**: the 32-byte merkle tree root hash
-2. **leaf**: the 32-byte leaf we want to prove is included in the merkle tree
-3. **leaf index**: the 8-byte index of the leaf
-4. **siblings**: an array of 32-byte values, arranged from the leaves to the root
+1. **root hash**: the 256-bit merkle tree root hash
+2. **leaf**: the 256-bit leaf we want to prove is included in the merkle tree
+3. **leaf index**: the 64-bit index of the leaf
+4. **siblings**: an array of 256-bit values, arranged from the leaves to the root
 
 `MERKLEVERIFY` returns as **output 4 bytes**:
 
